<resources>
    <string name="app_name">SportAPITask</string>
    <string name="item_headline_placeholder">Winning goal against Russia securing Semi-finals in WorldCup Russia 2018</string>
    <string name="athletes">Athletes</string>
    <string name="sports">Sports</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="frag_athletes_header">Athletes</string>
    <string name="search_athletes_tooltip">Search Athletes</string>
    <string name="placeholder_name">Name LastName</string>
    <string name="athlete_sport">Sport:</string>
    <string name="sport_placeholder">Football</string>
    <string name="athlete_club">Club:</string>
    <string name="club_placeholder">FC GNK Dinamo</string>
    <string name="nav_item_feed">Feed</string>
    <string name="country_placeholder">Croatia</string>
    <string name="country">Country</string>
    <string name="views_placeholder">Ivan Rakitić, Neymar Jr. + 46.8k others</string>
    <string name="share">Share</string>
    <string name="sport_placeholder_feed">Football</string>
</resources>
