<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/feed_icon"
            android:title="@string/nav_item_feed" />

        <item
            android:id="@+id/nav_athletes"
            android:icon="@drawable/ic_athletes"
            android:title="@string/athletes" />

        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/sports_icon"
            android:title="@string/sports" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user_profile_icon"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />

    </group>
</menu>